--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
+        <div>
             <h1>Apache Cordova</h1>
             <div id="version"></div>
             <div id="deviceready" class="blink">
